successfully extracted data and paired with the name for clean_page_3

--- a/Codes/Gait Report Extraction Mini Project/Exporter.ipynb
+++ b/Codes/Gait Report Extraction Mini Project/Exporter.ipynb
@@ -22,9 +22,244 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 65,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Processing file: C:\\Users\\yangk\\OneDrive\\Documents\\HATCH\\Programming Learning\\MotionCloud Reports\\fast_mid1-gait report.pdf\n",
+      "  Found 1 tables in C:\\Users\\yangk\\OneDrive\\Documents\\HATCH\\Programming Learning\\MotionCloud Reports\\fast_mid1-gait report.pdf on pages 3.\n",
+      "in this iteration, j =1 and i =0\n",
+      "in this iteration, j =3 and i =1\n",
+      "in this iteration, j =5 and i =2\n",
+      "                                0       1\n",
+      "0         Step Length - Left (cm)   84.33\n",
+      "1      Step Length SD - Left (cm)    1.85\n",
+      "2        Step Length - Right (cm)   90.95\n",
+      "3     Step Length SD - Right (cm)    2.08\n",
+      "4          Step Width - Left (cm)   12.32\n",
+      "5       Step Width SD - Left (cm)    1.50\n",
+      "6         Step Width - Right (cm)   12.30\n",
+      "7      Step Width SD - Right (cm)    2.43\n",
+      "8       Stride Length - Left (cm)  175.30\n",
+      "9    Stride Length SD - Left (cm)    2.70\n",
+      "10     Stride Length - Right (cm)  175.48\n",
+      "11  Stride Length SD - Right (cm)    2.93\n",
+      "\n",
+      "Processing file: C:\\Users\\yangk\\OneDrive\\Documents\\HATCH\\Programming Learning\\MotionCloud Reports\\fast_short1-gait report.pdf\n",
+      "  Found 1 tables in C:\\Users\\yangk\\OneDrive\\Documents\\HATCH\\Programming Learning\\MotionCloud Reports\\fast_short1-gait report.pdf on pages 3.\n",
+      "in this iteration, j =1 and i =0\n",
+      "in this iteration, j =3 and i =1\n",
+      "in this iteration, j =5 and i =2\n",
+      "                                0       1\n",
+      "0         Step Length - Left (cm)   87.09\n",
+      "1      Step Length SD - Left (cm)    2.59\n",
+      "2        Step Length - Right (cm)   88.96\n",
+      "3     Step Length SD - Right (cm)    2.19\n",
+      "4          Step Width - Left (cm)   14.45\n",
+      "5       Step Width SD - Left (cm)    1.88\n",
+      "6         Step Width - Right (cm)   14.77\n",
+      "7      Step Width SD - Right (cm)    1.68\n",
+      "8       Stride Length - Left (cm)  176.10\n",
+      "9    Stride Length SD - Left (cm)    1.60\n",
+      "10     Stride Length - Right (cm)  176.87\n",
+      "11  Stride Length SD - Right (cm)    1.88\n",
+      "\n",
+      "Processing file: C:\\Users\\yangk\\OneDrive\\Documents\\HATCH\\Programming Learning\\MotionCloud Reports\\fast_short2-gait report.pdf\n",
+      "  Found 1 tables in C:\\Users\\yangk\\OneDrive\\Documents\\HATCH\\Programming Learning\\MotionCloud Reports\\fast_short2-gait report.pdf on pages 3.\n",
+      "in this iteration, j =1 and i =0\n",
+      "in this iteration, j =3 and i =1\n",
+      "in this iteration, j =5 and i =2\n",
+      "                                0       1\n",
+      "0         Step Length - Left (cm)   87.47\n",
+      "1      Step Length SD - Left (cm)    4.38\n",
+      "2        Step Length - Right (cm)   93.05\n",
+      "3     Step Length SD - Right (cm)    2.33\n",
+      "4          Step Width - Left (cm)   11.82\n",
+      "5       Step Width SD - Left (cm)    2.44\n",
+      "6         Step Width - Right (cm)   11.83\n",
+      "7      Step Width SD - Right (cm)    2.17\n",
+      "8       Stride Length - Left (cm)  180.52\n",
+      "9    Stride Length SD - Left (cm)    5.39\n",
+      "10     Stride Length - Right (cm)  181.41\n",
+      "11  Stride Length SD - Right (cm)    3.93\n",
+      "\n",
+      "Processing file: C:\\Users\\yangk\\OneDrive\\Documents\\HATCH\\Programming Learning\\MotionCloud Reports\\normal_long1-gait report.pdf\n",
+      "  Found 1 tables in C:\\Users\\yangk\\OneDrive\\Documents\\HATCH\\Programming Learning\\MotionCloud Reports\\normal_long1-gait report.pdf on pages 3.\n",
+      "in this iteration, j =1 and i =0\n",
+      "in this iteration, j =3 and i =1\n",
+      "in this iteration, j =5 and i =2\n",
+      "                                0       1\n",
+      "0         Step Length - Left (cm)   69.92\n",
+      "1      Step Length SD - Left (cm)    1.69\n",
+      "2        Step Length - Right (cm)   73.49\n",
+      "3     Step Length SD - Right (cm)    2.22\n",
+      "4          Step Width - Left (cm)   11.39\n",
+      "5       Step Width SD - Left (cm)    2.57\n",
+      "6         Step Width - Right (cm)   11.46\n",
+      "7      Step Width SD - Right (cm)    2.11\n",
+      "8       Stride Length - Left (cm)  143.41\n",
+      "9    Stride Length SD - Left (cm)    3.35\n",
+      "10     Stride Length - Right (cm)  143.28\n",
+      "11  Stride Length SD - Right (cm)    3.57\n",
+      "\n",
+      "Processing file: C:\\Users\\yangk\\OneDrive\\Documents\\HATCH\\Programming Learning\\MotionCloud Reports\\normal_long2-gait report.pdf\n",
+      "  Found 1 tables in C:\\Users\\yangk\\OneDrive\\Documents\\HATCH\\Programming Learning\\MotionCloud Reports\\normal_long2-gait report.pdf on pages 3.\n",
+      "in this iteration, j =1 and i =0\n",
+      "in this iteration, j =3 and i =1\n",
+      "in this iteration, j =5 and i =2\n",
+      "                                0       1\n",
+      "0         Step Length - Left (cm)   71.22\n",
+      "1      Step Length SD - Left (cm)    1.98\n",
+      "2        Step Length - Right (cm)   77.28\n",
+      "3     Step Length SD - Right (cm)    2.02\n",
+      "4          Step Width - Left (cm)    9.51\n",
+      "5       Step Width SD - Left (cm)    2.07\n",
+      "6         Step Width - Right (cm)    9.65\n",
+      "7      Step Width SD - Right (cm)    1.59\n",
+      "8       Stride Length - Left (cm)  148.51\n",
+      "9    Stride Length SD - Left (cm)    3.38\n",
+      "10     Stride Length - Right (cm)  148.81\n",
+      "11  Stride Length SD - Right (cm)    2.81\n",
+      "\n",
+      "Processing file: C:\\Users\\yangk\\OneDrive\\Documents\\HATCH\\Programming Learning\\MotionCloud Reports\\normal_rect1-gait report.pdf\n",
+      "  Found 1 tables in C:\\Users\\yangk\\OneDrive\\Documents\\HATCH\\Programming Learning\\MotionCloud Reports\\normal_rect1-gait report.pdf on pages 3.\n",
+      "in this iteration, j =1 and i =0\n",
+      "in this iteration, j =3 and i =1\n",
+      "in this iteration, j =5 and i =2\n",
+      "                                0       1\n",
+      "0         Step Length - Left (cm)   63.38\n",
+      "1      Step Length SD - Left (cm)    3.08\n",
+      "2        Step Length - Right (cm)   71.65\n",
+      "3     Step Length SD - Right (cm)    4.31\n",
+      "4          Step Width - Left (cm)   11.44\n",
+      "5       Step Width SD - Left (cm)    3.31\n",
+      "6         Step Width - Right (cm)   12.68\n",
+      "7      Step Width SD - Right (cm)    5.30\n",
+      "8       Stride Length - Left (cm)  135.42\n",
+      "9    Stride Length SD - Left (cm)    5.34\n",
+      "10     Stride Length - Right (cm)  134.49\n",
+      "11  Stride Length SD - Right (cm)    8.27\n",
+      "\n",
+      "Processing file: C:\\Users\\yangk\\OneDrive\\Documents\\HATCH\\Programming Learning\\MotionCloud Reports\\slow_short1-gait report.pdf\n",
+      "  Found 1 tables in C:\\Users\\yangk\\OneDrive\\Documents\\HATCH\\Programming Learning\\MotionCloud Reports\\slow_short1-gait report.pdf on pages 3.\n",
+      "in this iteration, j =1 and i =0\n",
+      "in this iteration, j =3 and i =1\n",
+      "in this iteration, j =5 and i =2\n",
+      "                                0       1\n",
+      "0         Step Length - Left (cm)   53.99\n",
+      "1      Step Length SD - Left (cm)    2.27\n",
+      "2        Step Length - Right (cm)   61.14\n",
+      "3     Step Length SD - Right (cm)    2.81\n",
+      "4          Step Width - Left (cm)   11.60\n",
+      "5       Step Width SD - Left (cm)    2.05\n",
+      "6         Step Width - Right (cm)   11.80\n",
+      "7      Step Width SD - Right (cm)    2.35\n",
+      "8       Stride Length - Left (cm)  115.18\n",
+      "9    Stride Length SD - Left (cm)    4.35\n",
+      "10     Stride Length - Right (cm)  115.25\n",
+      "11  Stride Length SD - Right (cm)    4.28\n",
+      "\n",
+      "Processing file: C:\\Users\\yangk\\OneDrive\\Documents\\HATCH\\Programming Learning\\MotionCloud Reports\\slow_short2-gait_report.pdf\n",
+      "  Found 1 tables in C:\\Users\\yangk\\OneDrive\\Documents\\HATCH\\Programming Learning\\MotionCloud Reports\\slow_short2-gait_report.pdf on pages 3.\n",
+      "in this iteration, j =1 and i =0\n",
+      "in this iteration, j =3 and i =1\n",
+      "in this iteration, j =5 and i =2\n",
+      "                                0       1\n",
+      "0         Step Length - Left (cm)   51.33\n",
+      "1      Step Length SD - Left (cm)    3.82\n",
+      "2        Step Length - Right (cm)   59.37\n",
+      "3     Step Length SD - Right (cm)    3.07\n",
+      "4          Step Width - Left (cm)   13.55\n",
+      "5       Step Width SD - Left (cm)    2.18\n",
+      "6         Step Width - Right (cm)   13.56\n",
+      "7      Step Width SD - Right (cm)    2.34\n",
+      "8       Stride Length - Left (cm)  110.71\n",
+      "9    Stride Length SD - Left (cm)    6.41\n",
+      "10     Stride Length - Right (cm)  110.36\n",
+      "11  Stride Length SD - Right (cm)    6.71\n",
+      "\n",
+      "Processing file: C:\\Users\\yangk\\OneDrive\\Documents\\HATCH\\Programming Learning\\MotionCloud Reports\\slow_short3-gait reportpdf.pdf\n",
+      "  Found 1 tables in C:\\Users\\yangk\\OneDrive\\Documents\\HATCH\\Programming Learning\\MotionCloud Reports\\slow_short3-gait reportpdf.pdf on pages 3.\n",
+      "in this iteration, j =1 and i =0\n",
+      "in this iteration, j =3 and i =1\n",
+      "in this iteration, j =5 and i =2\n",
+      "                                0       1\n",
+      "0         Step Length - Left (cm)   52.17\n",
+      "1      Step Length SD - Left (cm)    5.30\n",
+      "2        Step Length - Right (cm)   59.88\n",
+      "3     Step Length SD - Right (cm)    5.42\n",
+      "4          Step Width - Left (cm)   12.46\n",
+      "5       Step Width SD - Left (cm)    2.04\n",
+      "6         Step Width - Right (cm)   12.46\n",
+      "7      Step Width SD - Right (cm)    1.51\n",
+      "8       Stride Length - Left (cm)  112.04\n",
+      "9    Stride Length SD - Left (cm)   10.56\n",
+      "10     Stride Length - Right (cm)  112.69\n",
+      "11  Stride Length SD - Right (cm)   10.35\n",
+      "\n",
+      "Processing file: C:\\Users\\yangk\\OneDrive\\Documents\\HATCH\\Programming Learning\\MotionCloud Reports\\tennis3-gait report.pdf\n",
+      "  Found 1 tables in C:\\Users\\yangk\\OneDrive\\Documents\\HATCH\\Programming Learning\\MotionCloud Reports\\tennis3-gait report.pdf on pages 3.\n",
+      "in this iteration, j =1 and i =0\n",
+      "in this iteration, j =3 and i =1\n",
+      "in this iteration, j =5 and i =2\n",
+      "                                0       1\n",
+      "0         Step Length - Left (cm)   66.33\n",
+      "1      Step Length SD - Left (cm)    1.53\n",
+      "2        Step Length - Right (cm)   68.11\n",
+      "3     Step Length SD - Right (cm)    1.64\n",
+      "4          Step Width - Left (cm)   16.92\n",
+      "5       Step Width SD - Left (cm)    2.13\n",
+      "6         Step Width - Right (cm)   16.51\n",
+      "7      Step Width SD - Right (cm)    1.99\n",
+      "8       Stride Length - Left (cm)  134.35\n",
+      "9    Stride Length SD - Left (cm)    3.08\n",
+      "10     Stride Length - Right (cm)  134.58\n",
+      "11  Stride Length SD - Right (cm)    2.38\n",
+      "\n",
+      "Processing file: C:\\Users\\yangk\\OneDrive\\Documents\\HATCH\\Programming Learning\\MotionCloud Reports\\tennis4_gait report.pdf\n",
+      "  Found 1 tables in C:\\Users\\yangk\\OneDrive\\Documents\\HATCH\\Programming Learning\\MotionCloud Reports\\tennis4_gait report.pdf on pages 3.\n",
+      "in this iteration, j =1 and i =0\n",
+      "in this iteration, j =3 and i =1\n",
+      "in this iteration, j =5 and i =2\n",
+      "                                0       1\n",
+      "0         Step Length - Left (cm)   66.26\n",
+      "1      Step Length SD - Left (cm)    2.56\n",
+      "2        Step Length - Right (cm)   66.67\n",
+      "3     Step Length SD - Right (cm)    2.44\n",
+      "4          Step Width - Left (cm)   15.25\n",
+      "5       Step Width SD - Left (cm)    2.05\n",
+      "6         Step Width - Right (cm)   15.76\n",
+      "7      Step Width SD - Right (cm)    2.29\n",
+      "8       Stride Length - Left (cm)  133.49\n",
+      "9    Stride Length SD - Left (cm)    4.22\n",
+      "10     Stride Length - Right (cm)  132.85\n",
+      "11  Stride Length SD - Right (cm)    4.67\n",
+      "\n",
+      "Processing file: C:\\Users\\yangk\\OneDrive\\Documents\\HATCH\\Programming Learning\\MotionCloud Reports\\tennis5-gait report.pdf\n",
+      "  Found 1 tables in C:\\Users\\yangk\\OneDrive\\Documents\\HATCH\\Programming Learning\\MotionCloud Reports\\tennis5-gait report.pdf on pages 3.\n",
+      "in this iteration, j =1 and i =0\n",
+      "in this iteration, j =3 and i =1\n",
+      "in this iteration, j =5 and i =2\n",
+      "                                0       1\n",
+      "0         Step Length - Left (cm)   67.37\n",
+      "1      Step Length SD - Left (cm)    2.17\n",
+      "2        Step Length - Right (cm)   74.48\n",
+      "3     Step Length SD - Right (cm)    2.36\n",
+      "4          Step Width - Left (cm)    9.95\n",
+      "5       Step Width SD - Left (cm)    1.87\n",
+      "6         Step Width - Right (cm)    9.72\n",
+      "7      Step Width SD - Right (cm)    1.82\n",
+      "8       Stride Length - Left (cm)  141.85\n",
+      "9    Stride Length SD - Left (cm)    4.31\n",
+      "10     Stride Length - Right (cm)  142.06\n",
+      "11  Stride Length SD - Right (cm)    4.35\n"
+     ]
+    }
+   ],
    "source": [
     "\n",
     "def clean_page_1(df):\n",
@@ -73,29 +308,57 @@
     "    \n",
     "\n",
     "def clean_page_3(df):\n",
-    "    new_rows = []\n",
-    "    for i, row in df.iterrows():\n",
-    "        # Ensure the row contains Step Length specifically, and that both columns have valid ± values\n",
-    "        if '±' in row[1]:  \n",
-    "            # Split left and right values and standard deviations\n",
-    "            try:\n",
-    "                left_value, left_sd = row[1].split('±')\n",
-    "                if i + 1 < len(df):\n",
-    "                    right_value, right_sd = row[(i + 1)][2].split('±')\n",
-    "\n",
-    "                    print('hello')\n",
-    "                    # Append rows in a fixed order to maintain alignment\n",
-    "                    new_rows.append(['Step Length (Left)', left_value.strip(), 'Value'])\n",
-    "                    new_rows.append(['Step Length (Left)', left_sd.strip(), 'SD'])\n",
-    "                    new_rows.append(['Step Length (Right)', right_value.strip(), 'Value'])\n",
-    "                    new_rows.append(['Step Length (Right)', right_sd.strip(), 'SD'])\n",
+    "    parameters_3 = [\n",
+    "    \"Step Length - Left (cm)\",\n",
+    "    \"Step Length SD - Left (cm)\",\n",
+    "    \"Step Length - Right (cm)\",\n",
+    "    \"Step Length SD - Right (cm)\",\n",
+    "    \"Step Width - Left (cm)\",\n",
+    "    \"Step Width SD - Left (cm)\",\n",
+    "    \"Step Width - Right (cm)\",\n",
+    "    \"Step Width SD - Right (cm)\",\n",
+    "    \"Stride Length - Left (cm)\",\n",
+    "    \"Stride Length SD - Left (cm)\",\n",
+    "    \"Stride Length - Right (cm)\",\n",
+    "    \"Stride Length SD - Right (cm)\"\n",
+    "    ]\n",
+    "    values_3 = []\n",
+    "    parameter_number = 3\n",
+    "    \n",
+    "    i = 0 #counter to count through each row \n",
+    "    j = 1\n",
+    "    \n",
+    "    for i in range(parameter_number):\n",
+    "        print(f'in this iteration, j ={j} and i ={i}')\n",
+    "        left_value, left_sd = df.iloc[2, j].split(' ± ')\n",
+    "        right_value,right_sd = df.iloc[3, j].split(' ± ')\n",
     "                    \n",
-    "            except ValueError as ve:\n",
-    "                print(f\"Error in row {i}: {ve}. Skipping this row\")\n",
+    "        # Append rows in the desired format\n",
+    "        values_3.append(left_value)\n",
+    "        values_3.append(left_sd)\n",
+    "        values_3.append(right_value)\n",
+    "        values_3.append(right_sd)\n",
+    "        \n",
+    "        j+=2\n",
+    "    df3 = pd.DataFrame(list(zip(parameters_3, values_3)))\n",
+    "    print(df3)\n",
     "    \n",
     "    \n",
-    "    # Create a new DataFrame with the aligned row\n",
-    "    df3 = pd.DataFrame(new_rows, columns=['Parameter', 'Value', 'SD'])\n",
+    "        \n",
+    "        \n",
+    "        \n",
+    "                    \n",
+    "\n",
+    "            #         print('hello')\n",
+    "            #         # Append rows in a fixed order to maintain alignment\n",
+    "            #         new_rows.append(['Step Length (Left)', left_value.strip(), 'Value'])\n",
+    "            #         new_rows.append(['Step Length (Left)', left_sd.strip(), 'SD'])\n",
+    "            #         new_rows.append(['Step Length (Right)', right_value.strip(), 'Value'])\n",
+    "            #         new_rows.append(['Step Length (Right)', right_sd.strip(), 'SD'])\n",
+    "                    \n",
+    "            # except ValueError as ve:\n",
+    "            #     print(f\"Error in row {i}: {ve}. Skipping this row\")\n",
+    "\n",
     "\n",
     "\n",
     "\n",
