Update markdown cell for gait report extractor

--- a/gait_report_pdf_extractor.ipynb
+++ b/gait_report_pdf_extractor.ipynb
@@ -1,6 +1,14 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Gait Report PDF Extractor\n",
+    "Used to extract pdf gait report from Xsens MotionCloud Platform (reference system in this study) into csv format for easy visualization & further analysis."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -12,13 +20,6 @@
     "import glob\n",
     "import re\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
