Tidying up data analysis pipeline and README

--- a/gait_data_analysis_workbook.ipynb
+++ b/gait_data_analysis_workbook.ipynb
@@ -166,6 +166,162 @@
     "    rmse_df.to_excel(writer, sheet_name=\"RMSE_Summary\")\n",
     "print(\"Workbook saved:\", output_file)\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7f49e45c",
+   "metadata": {},
+   "source": [
+    "## 6. Visualization Helper Functions"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "11d13727",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Step 6: Visualization Helper Functions\n",
+    "\n",
+    "\n",
+    "from ipywidgets import Output\n",
+    "from scipy.stats import linregress\n",
+    "\n",
+    "# Prepare bilateral-only DataFrame\n",
+    "df_bilateral = all_merged[all_merged['Foot']=='bilateral'].copy()\n",
+    "\n",
+    "def show_scatter(parameter, tasks=None):\n",
+    "    \"\"\"\n",
+    "    Scatter plot of Awinda vs. Algorithm for `parameter`.\n",
+    "    Draws identity line and best-fit regression.\n",
+    "    \"\"\"\n",
+    "    out = Output()\n",
+    "    display(out)\n",
+    "    if tasks is None:\n",
+    "        tasks = df_bilateral['Task'].unique().tolist()\n",
+    "    dfp = df_bilateral[df_bilateral['Task'].isin(tasks)]\n",
+    "    xcol = f\"{parameter}_mean_ref\"\n",
+    "    ycol = f\"{parameter}_mean_algo\"\n",
+    "\n",
+    "    with out:\n",
+    "        fig = px.scatter(\n",
+    "            dfp, x=xcol, y=ycol,\n",
+    "            color='Task', hover_data=['Trial']\n",
+    "        )\n",
+    "        # Identity line y=x\n",
+    "        lims = [dfp[xcol].min(), dfp[xcol].max()]\n",
+    "        fig.add_trace(go.Scatter(\n",
+    "            x=lims, y=lims, mode='lines',\n",
+    "            line=dict(dash='dash', color='gray'),\n",
+    "            name='y = x'\n",
+    "        ))\n",
+    "        # Best-fit regression\n",
+    "        slope, intercept, r_val, _, _ = linregress(dfp[xcol], dfp[ycol])\n",
+    "        fit_y = [slope * v + intercept for v in lims]\n",
+    "        fig.add_trace(go.Scatter(\n",
+    "            x=lims, y=fit_y, mode='lines',\n",
+    "            line=dict(color='blue'), name='Best fit'\n",
+    "        ))\n",
+    "        fig.update_layout(\n",
+    "            title=f\"Awinda vs Algo: {parameter}\",\n",
+    "            xaxis_title=f\"Awinda ({parameter})\",\n",
+    "            yaxis_title=f\"Algorithm ({parameter})\"\n",
+    "        )\n",
+    "        fig.show()\n",
+    "\n",
+    "def show_bland_altman(parameter, tasks=None):\n",
+    "    \"\"\"\n",
+    "    Bland–Altman plot for `parameter`.\n",
+    "    Plots mean vs bias with 95% limits of agreement.\n",
+    "    \"\"\"\n",
+    "    out = Output()\n",
+    "    display(out)\n",
+    "    if tasks is None:\n",
+    "        tasks = df_bilateral['Task'].unique().tolist()\n",
+    "    dfp = df_bilateral[df_bilateral['Task'].isin(tasks)]\n",
+    "    xcol = f\"{parameter}_mean_ref\"\n",
+    "    ycol = f\"{parameter}_mean_algo\"\n",
+    "\n",
+    "    mean_vals = (dfp[xcol] + dfp[ycol]) / 2\n",
+    "    bias = dfp[ycol] - dfp[xcol]\n",
+    "    mbias = bias.mean()\n",
+    "    sd    = bias.std()\n",
+    "    upper = mbias + 1.96 * sd\n",
+    "    lower = mbias - 1.96 * sd\n",
+    "\n",
+    "    with out:\n",
+    "        fig = go.Figure()\n",
+    "        fig.add_trace(go.Scatter(\n",
+    "            x=mean_vals, y=bias, mode='markers',\n",
+    "            marker=dict(size=8), name='Data'\n",
+    "        ))\n",
+    "        # mean bias line\n",
+    "        fig.add_hline(y=mbias, line_dash='dash', line_color='gray',\n",
+    "                      annotation_text=f\"Mean bias: {mbias:.2f}\", showarrow=False)\n",
+    "        # limits of agreement\n",
+    "        fig.add_hline(y=upper, line_dash='dash', line_color='red',\n",
+    "                      annotation_text=f\"+1.96 SD: {upper:.2f}\", showarrow=False)\n",
+    "        fig.add_hline(y=lower, line_dash='dash', line_color='red',\n",
+    "                      annotation_text=f\"-1.96 SD: {lower:.2f}\", showarrow=False)\n",
+    "        fig.update_layout(\n",
+    "            title=f\"Bland–Altman: {parameter}\",\n",
+    "            xaxis_title=\"Mean of Two Systems\",\n",
+    "            yaxis_title=\"Bias\"\n",
+    "        )\n",
+    "        fig.show()\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "70b800cc",
+   "metadata": {},
+   "source": [
+    "## 7. Interactive Widgets"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2b31c4ae",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Step 7: Interactive Widgets Which Output a Scatter Plot and a Bland-Altman Plot\n",
+    "\n",
+    "# Dropdown for choosing parameter\n",
+    "param_dropdown = widgets.Dropdown(\n",
+    "    options=[p for p in df_bilateral.columns if p.endswith('_mean_ref')],\n",
+    "    description='Parameter:',\n",
+    "    layout=widgets.Layout(width='50%')\n",
+    ")\n",
+    "\n",
+    "# Multi-select for tasks\n",
+    "task_selector = widgets.SelectMultiple(\n",
+    "    options=df_bilateral['Task'].unique().tolist(),\n",
+    "    description='Tasks:',\n",
+    "    layout=widgets.Layout(width='50%', height='150px')\n",
+    ")\n",
+    "\n",
+    "# Display controls\n",
+    "display(param_dropdown, task_selector)\n",
+    "\n",
+    "# Update both plots when controls change\n",
+    "def on_controls_change(change):\n",
+    "    # clear previous outputs\n",
+    "    clear_output(wait=True)\n",
+    "    display(param_dropdown, task_selector)\n",
+    "    # extract base param name without suffix\n",
+    "    param = param_dropdown.value.rsplit('_', 2)[0]\n",
+    "    show_scatter(param, list(task_selector.value))\n",
+    "    show_bland_altman(param, list(task_selector.value))\n",
+    "\n",
+    "param_dropdown.observe(on_controls_change, names='value')\n",
+    "task_selector.observe(on_controls_change, names='value')\n",
+    "\n",
+    "# Initial draw\n",
+    "on_controls_change(None)\n"
+   ]
   }
  ],
  "metadata": {
